fix: Iphone aligned

--- a/src/pages/homePage/styles/Home.scss
+++ b/src/pages/homePage/styles/Home.scss
@@ -114,7 +114,7 @@ body {
     &-right {
       display: flex;
       justify-content: center;
-      margin-left: 60px;
+      padding-right: 0px;
     }
   }
 }
